# elaine

./: CMakeLists.txt  main.cpp  related_research.cpp
src/: CMakeLists.txt  address.cpp  address.h  context.cpp  context.h  coroutine.cpp  coroutine.h  multiplexer.cpp  multiplexer.h  mutex.cpp  mutex.h  scheduler.cpp  scheduler.h  singleton.h  socket.cpp  socket.h  thread.cpp  thread.h  worker.cpp  worker.h
src/util/: defer.h
test/: CMakeLists.txt  bench.sh  coroutine_test.cpp  defer_test.cpp  fcontext_test.cpp  liburing_test.cpp  liburing_test.h  multiplexer_test.cpp  scheduler_test.cpp  sfinae_test.cpp  singleton_test.cpp  worker_test.cpp
